--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -2,7 +2,8 @@
 <!Doctype html>
 <html>
 <head>
-<meta charset="utf-8">
+<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Privacy Policy | Pagrit</title>
 </head>
 <body>
