--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -6,27 +6,26 @@
 </head>
 <body>
 
-		<h1>Политика конфиденциальности</h1>
+		<h1>РџРѕР»РёС‚РёРєР° РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё</h1>
 		
-		Основные положения политики конфиденциальности приложения Woncy формируются следующим образом:
+		РћСЃРЅРѕРІРЅС‹Рµ РїРѕР»РѕР¶РµРЅРёСЏ РїРѕР»РёС‚РёРєРё РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё РїСЂРёР»РѕР¶РµРЅРёСЏ Woncy С„РѕСЂРјРёСЂСѓСЋС‚СЃСЏ СЃР»РµРґСѓСЋС‰РёРј РѕР±СЂР°Р·РѕРј:
 		<ul>
-	<li>Приложение не обрабатывает и не передает персональные данные пользователя;</li>
-	<li>Приложение не запрашивает адрес электронной почты, телефон, местоположение или другую информацию о пользователях;</li>
-	<li>Приложение использует интернет для загрузки и показа изображений;</li>
-	<li>В приложении присутствуют встроенные платежи для расширения функционала приложения;</li>
+	<li>РџСЂРёР»РѕР¶РµРЅРёРµ РЅРµ РѕР±СЂР°Р±Р°С‚С‹РІР°РµС‚ Рё РЅРµ РїРµСЂРµРґР°РµС‚ РїРµСЂСЃРѕРЅР°Р»СЊРЅС‹Рµ РґР°РЅРЅС‹Рµ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ;</li>
+	<li>РџСЂРёР»РѕР¶РµРЅРёРµ РЅРµ Р·Р°РїСЂР°С€РёРІР°РµС‚ Р°РґСЂРµСЃ СЌР»РµРєС‚СЂРѕРЅРЅРѕР№ РїРѕС‡С‚С‹, С‚РµР»РµС„РѕРЅ, РјРµСЃС‚РѕРїРѕР»РѕР¶РµРЅРёРµ РёР»Рё РґСЂСѓРіСѓСЋ РёРЅС„РѕСЂРјР°С†РёСЋ Рѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏС…;</li>
+	<li>РџСЂРёР»РѕР¶РµРЅРёРµ РёСЃРїРѕР»СЊР·СѓРµС‚ РёРЅС‚РµСЂРЅРµС‚ РґР»СЏ Р·Р°РіСЂСѓР·РєРё Рё РїРѕРєР°Р·Р° РёР·РѕР±СЂР°Р¶РµРЅРёР№;</li>
+	<li>Р’ РїСЂРёР»РѕР¶РµРЅРёРё РїСЂРёСЃСѓС‚СЃС‚РІСѓСЋС‚ РІСЃС‚СЂРѕРµРЅРЅС‹Рµ РїР»Р°С‚РµР¶Рё РґР»СЏ СЂР°СЃС€РёСЂРµРЅРёСЏ С„СѓРЅРєС†РёРѕРЅР°Р»Р° РїСЂРёР»РѕР¶РµРЅРёСЏ;</li>
 		</ul>
 		
-		Если у вас возникли вопросы или сомнения по поводу нашей политики конфиденциальности свяжитесь с нами.
+		Р•СЃР»Рё Сѓ РІР°СЃ РІРѕР·РЅРёРєР»Рё РІРѕРїСЂРѕСЃС‹ РёР»Рё СЃРѕРјРЅРµРЅРёСЏ РїРѕ РїРѕРІРѕРґСѓ РЅР°С€РµР№ РїРѕР»РёС‚РёРєРё РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё СЃРІСЏР¶РёС‚РµСЃСЊ СЃ РЅР°РјРё.
 		
-		Контакты:
+		РљРѕРЅС‚Р°РєС‚С‹:
 		
 		E-mail:
 		<ul>
 		<li>pagritcom@gmail.com</li>
 		</ul>
 		
-		Все изменения политики конфиденциальности будут опубликованы на этой странице.
-		
+		Р’СЃРµ РёР·РјРµРЅРµРЅРёСЏ РїРѕР»РёС‚РёРєРё РєРѕРЅС„РёРґРµРЅС†РёР°Р»СЊРЅРѕСЃС‚Рё Р±СѓРґСѓС‚ РѕРїСѓР±Р»РёРєРѕРІР°РЅС‹ РЅР° СЌС‚РѕР№ СЃС‚СЂР°РЅРёС†Рµ.
 </div>
 <!-- //services -->
 <!-- our works -->
