--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -9,20 +9,26 @@
 		<h1>Политика конфиденциальности</h1>
 		
 		Основные положения политики конфиденциальности приложения Woncy формируются следующим образом:
-		<ul>
-	<li>Приложение не обрабатывает и не передает персональные данные пользователя;</li>
-	<li>Приложение не запрашивает адрес электронной почты, телефон, местоположение или другую информацию о пользователях;</li>
-	<li>Приложение использует интернет для загрузки и показа изображений;</li>
-	<li>В приложении присутствуют встроенные платежи для расширения функционала приложения;</li>
-		</ul>
+		
+		<h2>Мы не собираем и не передаем личную информацию пользователей.</h2>
+		При использовании нашего приложения, мы не требуем, чтобы вы предоставляли какую-либо информацию, и мы не собираем никакой информации о вас или вашем устройстве(кроме неличностной информации о правильной работе приложения и его сбоях).
+		<br>
+		<br>
+		Мы соблюдаем Закон о защите конфиденциальности детей в Интернете(«COPPA»).
+
+		<h2>Требуемые разрешения</h2>
+			<ul>
+				<li>Доступ к Интернету — для загрузки и показа изображений;</li>
+				<li>Встроенные платежи — для расширения функционала приложения.</li>
+			</ul>
 		
 		Если у вас возникли вопросы или сомнения по поводу нашей политики конфиденциальности свяжитесь с нами.
-		
+		<br>
+		<br>
 		Контакты:
-		
-		E-mail:
+	
 		<ul>
-		<li>pagritcom@gmail.com</li>
+		<li>E-mail: pagritcom@gmail.com</li>
 		</ul>
 		
 		Все изменения политики конфиденциальности будут опубликованы на этой странице.
