--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -22,6 +22,8 @@
 				<li>Встроенные платежи — для расширения функционала приложения.</li>
 			</ul>
 		
+		<h4>Используя приложение Woncy, вы принимаете условия данной политики конфиденциальности.</h4>
+		
 		Если у вас возникли вопросы или сомнения по поводу нашей политики конфиденциальности свяжитесь с нами.
 		<br>
 		<br>
