--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -5,7 +5,7 @@
 	<title>Privacy Policy | Pagrit</title>
 </head>
 <body>
-
+	<div style="width:70%">
 		<h1>Политика конфиденциальности</h1>
 		
 		Основные положения политики конфиденциальности приложения Woncy формируются следующим образом:
