--- a/privacy_policy_quiz.html
+++ b/privacy_policy_quiz.html
@@ -7,21 +7,22 @@
 	<div style="width:70%">
 		<h1>Политика конфиденциальности</h1>
 		
-		Основные положения политики конфиденциальности приложения Woncy формируются следующим образом:
+		Основные положения политики конфиденциальности приложений разработчика Pagrit (https://play.google.com/store/apps/developer?id=Pagrit) формируются следующим образом:
 		
-		<h2>Мы не собираем и не передаем личную информацию пользователей.</h2>
-		При использовании нашего приложения, мы не требуем, чтобы вы предоставляли какую-либо информацию, и мы не собираем никакой информации о вас или вашем устройстве(кроме неличностной информации о правильной работе приложения и его сбоях).
+		<h2>Приложения не передают личную информацию пользователя третьим лицам</h2>
+		Вы можете только сами предоставить свои данные (для игры онлайн) или информацию об устройстве (для отчета
+        о сбоях).
 		<br>
 		<br>
 		Мы соблюдаем Закон о защите конфиденциальности детей в Интернете(«COPPA»).
 
-		<h2>Требуемые разрешения</h2>
+		<h2>Требуемые разрешения:</h2>
 			<ul>
-				<li>Доступ к Интернету — для загрузки и показа изображений;</li>
+				<li>Доступ к Интернету — для загрузки изображений и игры онлайн;</li>
 				<li>Встроенные платежи — для расширения функционала приложения.</li>
 			</ul>
 		
-		<h4>Используя приложение Woncy, вы принимаете условия данной политики конфиденциальности.</h4>
+		<h4>Используя приложение разработчика Pagrit, вы принимаете условия данной политики конфиденциальности.</h4>
 		
 		Если у вас возникли вопросы или сомнения по поводу нашей политики конфиденциальности свяжитесь с нами.
 		<br>
